--- a/react-blogs/freivys-4974/src/index.scss
+++ b/react-blogs/freivys-4974/src/index.scss
@@ -7,8 +7,9 @@
   --font-title: 'Playfair Display', serif;
   --font-main: 'Raleway', sans-serif;
 
+  --min-height: 5rem;
   --min-width: 20rem;
-  --max-width: 80rem;
+  --max-width: 75rem;
 }
 
 * {
@@ -134,6 +135,5 @@ body {
   min-height: 100vh;
   min-width: var(--min-width);
   // line-height: 1.5;
-  hyphens: auto;
   -webkit-font-smoothing: antialiased;
 }
